<resources>
    <!--Common-->
    <string name="url_author">https://github.com/ScottSu163425</string>
    <string name="url_project">https://github.com/ScottSu163425/sMovie</string>

    <string name="app_name">SMovie</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="transition_name_cover">cover</string>
    <string name="transition_name_fab">fab</string>
    <string name="remove">移除</string>


    <string name="bad_connection">请检查网络</string>

    <!--Main-->
    <string name="exit_app_confirm">退出应用?</string>

    <!--Drawer navigation-->
    <string name="action_hot">热映</string>
    <string name="action_coming_soon">即将上映</string>
    <string name="action_top250">Top250</string>
    <string name="action_favorite">收藏夹</string>
    <string name="action_about">关于</string>
    <string name="section_movies">电影</string>
    <string name="section_my">我的</string>
    <string name="section_others">其他</string>

    <!--Main-->
    <string name="action_search">搜索</string>
    <string name="action_more">更多</string>

    <!--Top250-->
    <string name="tag_ranking_1st">No.1</string>
    <string name="tag_ranking_2nd">No.2</string>
    <string name="tag_ranking_3rd">No.3</string>
    <string name="no_rating">暂无评分</string>

    <!--Search-->
    <string name="hint_search_movie">搜索影片...</string>

    <!--Movie detail-->
    <string name="subhead_duration">时长</string>
    <string name="subhead_summary">简介</string>
    <string name="subhead_director">导演</string>
    <string name="subhead_year">年代</string>
    <string name="subhead_region">地区</string>
    <string name="subhead_genres">类型</string>
    <string name="subhead_casts">主演</string>
    <string name="subhead_rating">评分</string>
    <string name="subhead_short_comment">热门短评</string>
    <string name="subhead_photos">剧照</string>
    <string name="subhead_labels">标签</string>
    <string name="add_to_favorites">加入收藏夹</string>
    <string name="favorite_success">收藏成功</string>
    <string name="favorite_exist">收藏夹中已存在</string>

    <string name="hot">热映</string>

    <!--Favoretes-->
    <string name="favorite_movie">影片</string>
    <string name="favorite_celebrity">电影人</string>

    <!--about-->
    <string name="author">su</string>
    <string name="author_location">Fuzhou, China</string>
    <string name="version">版本</string>
    <string name="project_page">项目地址</string>
    <string name="choose_browser">请选择浏览器</string>


</resources>
