<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/action_about"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_s">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_s">

                        <ImageView
                            android:layout_width="46dp"
                            android:layout_height="46dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/padding_xxl"
                            android:text="@string/app_name"
                            android:textColor="@color/textPrimary"
                            android:textSize="@dimen/text_size_headline"
                            />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/fl_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_s">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_person_grey_600_36dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_xxl"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/author"
                                android:textColor="@color/textPrimary"
                                android:textSize="@dimen/text_size_body"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/author_location"
                                android:textSize="@dimen/text_size_caption"
                                />
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/fl_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_s">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_flag_grey_600_36dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_xxl"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textColor="@color/textPrimary"
                                android:textSize="@dimen/text_size_body"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="1.0.0"
                                android:textSize="@dimen/text_size_caption"
                                />
                        </LinearLayout>

                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/fl_project_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_s"
                        >

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_open_in_browser_grey_600_36dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/padding_xxl"
                            android:text="@string/project_page"
                            android:textColor="@color/textPrimary"
                            android:textSize="@dimen/text_size_body"
                            />

                    </FrameLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/padding_s"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>